finished service with bar chart
