# internal/api/api.go
@@ -2,7 +2,9 @@ package api
 
 import (
 	"net/http"
+	"os"
 
+	"event-diary/chart"
 	"event-diary/internal/models"
 	"event-diary/internal/repo"
 	"event-diary/utils"
@@ -28,6 +30,19 @@ func NewHandler(log *zap.SugaredLogger) (*handler, error) {
 		c:   c,
 		log: log,
 	}, nil
+}
+
+// @Summary Exibe relatório com contagem de convulsões registradas ao longo do dia
+// @Produce  json
+// @Success 200 "ok"
+// @Router /relatorio [get]
+func (h *handler) Report(c *gin.Context) {
+	file, err := os.ReadFile("bar.html")
+	if err != nil {
+		c.JSON(http.StatusNotFound, web.APIError{ErrorCode: http.StatusNotFound, ErrorMessage: "relatório não encontrado; experimente fazer alguns registros"})
+	}
+	h.log.Info("show report")
+	c.HTML(http.StatusOK, string(file), nil)
 }
 
 // @Summary Adiciona um novo registro no diário
@@ -67,45 +82,33 @@ func (h *handler) AddRecord(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, web.APIError{ErrorMessage: "contact system administrator", ErrorCode: http.StatusInternalServerError})
 		return
 	}
+	go func() {
+		records, err := h.c.AllRecords()
+		if err != nil {
+			h.log.Infof("h.c.AllRecords %v", err)
+			return
+		}
+		reports, err := models.ReportData(records)
+		if err != nil {
+			h.log.Infof("models.ReportData %v", err)
+			return
+		}
+
+		chart.BarChart(reports.ToBarData(), reports.HourArr())
+	}()
 	c.JSON(http.StatusOK, newRecord)
 }
 
 // @Summary Lista todos os registros
 // @Produce  json
-// @Param   ocorrido_agora    query    bool     true        "Evento ocorrido agora?"
-// @Param   horario_evento    query    string   true        "Horário do evento"
-// @Param   reporter          query    string   true        "Quem está registrando?"
-// @Param   descricao         query    string   true        "Descrição do evento"
-// @Success 200 {object} models.Record	"ok"
-// @Failure 400 {object} web.APIError "insira dados faltantes"
-// @Failure 500 {object} web.APIError "falha na inserção de dados"
-// @Router /registro [get]
+// @Success 200 {object} []models.Record	"ok"
+// @Router /registros [get]
 func (h *handler) AllRecords(c *gin.Context) {
-	newRecord := &models.Record{}
-	newRecord.EventTime = c.Query("horario_evento")
-	newRecord.Reporter = c.Query("reporter")
-	newRecord.RecordTime = utils.Now()
-	if c.Query("ocorrido_agora") == "true" {
-		newRecord.EventTime = newRecord.RecordTime
-	} else {
-		custom, err := utils.Custom(c.Query("horario_evento"))
-		if err != nil {
-			c.JSON(http.StatusBadRequest, web.APIError{ErrorMessage: err.Error(), ErrorCode: http.StatusBadRequest})
-			return
-		}
-		newRecord.EventTime = custom
-	}
-	newRecord.Description = c.Query("descricao")
-
-	if err := newRecord.Valid(); err != nil {
-		c.JSON(http.StatusBadRequest, web.APIError{ErrorMessage: err.Error(), ErrorCode: http.StatusBadRequest})
-		return
-	}
-
-	if err := h.c.Create(newRecord); err != nil {
+	records, err := h.c.AllRecords()
+	if err != nil {
 		h.log.Errorf("h.c.Create - %v", err)
 		c.JSON(http.StatusInternalServerError, web.APIError{ErrorMessage: "contact system administrator", ErrorCode: http.StatusInternalServerError})
 		return
 	}
-	c.JSON(http.StatusOK, newRecord)
+	c.JSON(http.StatusOK, records)
 }
