# main.go
@@ -1,6 +1,8 @@
 package main
 
 import (
+	"net/http"
+
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -18,15 +20,34 @@ import (
 // @BasePath /diario
 func main() {
 	log := zap.NewExample().Sugar()
-	h, err := api.NewHandler(log)
+	api, err := api.NewHandler(log)
 	if err != nil {
 		log.Error("api.NewHandler", err)
 	}
-	r := gin.New()
 
+	r := gin.Default()
+
+	r.Static("/bar.html", "./bar.html")
+	r.LoadHTMLFiles("bar.html")
 	g := r.Group("diario")
 
-	g.GET("/registro", h.AddRecord)
+	g.GET("/registro", api.AddRecord)
+	r.GET("/relatorio", func(c *gin.Context) {
+		// file, err := os.ReadFile("bar.html")
+		// if err != nil {
+		// 	c.JSON(http.StatusNotFound, web.APIError{ErrorCode: http.StatusNotFound, ErrorMessage: "relatório não encontrado; experimente fazer alguns registros"})
+		// }
+		c.HTML(
+			http.StatusOK,
+			"bar.html",
+			gin.H{
+				"content": "Esse é um relatório de crises",
+				"title":   "Relatório de crises",
+				"url":     "/bar.html",
+			},
+		)
+	})
+	g.GET("/registros", api.AllRecords)
 
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
